@@ -82,7 +82,7 @@ class TestSiteATDocument(atcttestcase.ATCTTypeTestCase):
     portal_type = 'Document'
     title = 'Page'
     meta_type = 'ATDocument'
-    icon = 'document_icon.gif'
+    icon = 'document_icon.png'
 
     def test_doesImplementHistoryAware(self):
         iface = IHistoryAware
