@@ -81,7 +81,7 @@ class TestSiteATFolder(atcttestcase.ATCTTypeTestCase, FolderTestMixin):
     portal_type = 'Folder'
     title = 'Folder'
     meta_type = 'ATFolder'
-    icon = 'folder_icon.gif'
+    icon = 'folder_icon.png'
 
     def test_implementsOrderInterface(self):
         self.failUnless(OFSIOrderedContainer.providedBy(self._ATCT))
@@ -133,7 +133,7 @@ class TestSiteATBTreeFolder(atcttestcase.ATCTTypeTestCase, FolderTestMixin):
     portal_type = 'Large Plone Folder'
     title = 'Large Folder'
     meta_type = 'ATBTreeFolder'
-    icon = 'folder_icon.gif'
+    icon = 'folder_icon.png'
 
     def test_implementsATBTreeFolder(self):
         iface = IATBTreeFolder
