@@ -84,7 +84,7 @@ class TestSiteATImage(atcttestcase.ATCTTypeTestCase):
     portal_type = 'Image'
     title = 'Image'
     meta_type = 'ATImage'
-    icon = 'image_icon.gif'
+    icon = 'image_icon.png'
 
     def test_implementsImageContent(self):
         iface = IImageContent
