@@ -159,7 +159,7 @@ class TestSiteATTopic(atcttestcase.ATCTTypeTestCase):
     portal_type = 'Topic'
     title = 'Collection'
     meta_type = 'ATTopic'
-    icon = 'topic_icon.gif'
+    icon = 'topic_icon.png'
 
     def afterSetUp(self):
         self.setRoles(['Manager', 'Member'])
